Added "text" and "main list" templates

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <title>Project Name</title>
+    <title>Школа разработки интерфейсов</title>
     <meta name="description" content="Short page description"/>
     <meta name="keywords" content="first second third key word"/>
     <link rel="stylesheet" href="css/normalize.css"/>
@@ -17,12 +17,30 @@
 
     <div class="b-page">
 
-        <header class="b-header"></header>
+        <div class="b-sidebar">
 
-        <div class="b-main"></div>
+            <header class="b-sidebar__header">Выпускной альбом</header>
 
-        <footer class="b-footer"></footer>
+            <ul class="b-sidebar__list">
+                <li class="b-sidebar__item">
+                    <a class="b-sidebar__link b-sidebar__link_state_active" href="#">Школа</a>
+                </li>
+                <li class="b-sidebar__item">
+                    <a class="b-sidebar__link" href="#">Студенты</a>
+                </li>
+                <li class="b-sidebar__item">
+                    <a class="b-sidebar__link" href="#">Лекторы</a>
+                </li>
+                <li class="b-sidebar__item">
+                    <a class="b-sidebar__link" href="#">Лекции</a>
+                </li>
+            </ul>
 
+        </div>
+
+        <div class="b-main g-clf">
+
+        </div>
 
     </div>
 
