--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html ng-app="shri">
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
@@ -23,27 +23,30 @@
 
             <ul class="b-sidebar__list">
                 <li class="b-sidebar__item">
-                    <a class="b-sidebar__link b-sidebar__link_state_active" href="#">Школа</a>
+                    <a class="b-sidebar__link b-sidebar__link_state_active" href="/">Школа</a>
                 </li>
                 <li class="b-sidebar__item">
-                    <a class="b-sidebar__link" href="#">Студенты</a>
+                    <a class="b-sidebar__link" href="/#/students">Студенты</a>
                 </li>
                 <li class="b-sidebar__item">
-                    <a class="b-sidebar__link" href="#">Лекторы</a>
+                    <a class="b-sidebar__link" href="/#/lecturers">Лекторы</a>
                 </li>
                 <li class="b-sidebar__item">
-                    <a class="b-sidebar__link" href="#">Лекции</a>
+                    <a class="b-sidebar__link" href="/#/lectures">Лекции</a>
                 </li>
             </ul>
 
         </div>
 
-        <div class="b-main g-clf">
-
-        </div>
+        <div class="b-main g-clf" ng-view></div>
 
     </div>
 
+    <script type="text/javascript" src="js/libs/angular-1.0.8.min.js"></script>
+    <script type="text/javascript" src="js/libs/jquery-1.8.2.min.js"></script>
+    <script type="text/javascript" src="js/libs/parse-1.2.12.js"></script>
+    <script type="text/javascript" src="js/common.js"></script>
+    <script type="text/javascript" src="js/myApp.js"></script>
     <script src="http://localhost:35729/livereload.js"></script>
 
 </body>
