Поправлены description и keywords

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title>Школа разработки интерфейсов</title>
-    <meta name="description" content="Short page description"/>
-    <meta name="keywords" content="first second third key word"/>
+    <meta name="description" content="Домашнее задание в рамках ШРИ 2013"/>
+    <meta name="keywords" content="ШРИ, Яндекс, Разработка, Интерфейсы"/>
     <link rel="stylesheet" href="css/normalize.css"/>
     <link rel="stylesheet" href="css/style.min.css"/>
     <!--[if lt IE 9]>
