Поправлен поиск по лекциям, обновлена версия AngularJS. Добавлен отдельно модуль роутов.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 
     </div>
 
-    <script type="text/javascript" src="js/libs/angular-1.0.8.min.js"></script>
+    <script type="text/javascript" src="js/libs/angular.min-1.2.0.rc3.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
     <script type="text/javascript" src="js/myApp.js"></script>
 
 </body>
